fixed work card on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -720,6 +720,8 @@ h1, h2, h3, h4, h5, h6, figure {
 @media screen and (max-width: 768px) {
   .work {
     height: 400px;
+    display: flex;
+    align-items: flex-end;
   }
 }
 @media screen and (max-width: 480px) {
@@ -733,6 +735,7 @@ h1, h2, h3, h4, h5, h6, figure {
   height: 270px;
   background: #fff;
   opacity: 0;
+  padding: 10px;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
@@ -756,7 +759,12 @@ h1, h2, h3, h4, h5, h6, figure {
 @media screen and (max-width: 768px) {
   .work .desc {
     opacity: 1;
-    background: rgba(255, 255, 255, 0.6);
+    height: max-content;
+    display: block;
+    width: 100%;
+    background: #fff;
+    
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
   }
   .work .desc h3 {
     -webkit-transform: translate3d(0, 0, 0);
